fixing bad file character

--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -4,233 +4,230 @@ import type { Publication } from "@/components/publicationList/publications";
 import Layout from "@/layouts/Layout.astro";
 
 const essays: Publication[] = [
-    {
-        authors: [],
-        title: "Brown University: 250th Anniversary Symposium: The Next 250 Years",
-        year: 2015,
-        pdf: "/papers/250th Anniversary Symposium.pdf",
-        tags: [],
-    },
-    {
-        authors: ["Sorin Istrail", "Solomon Marcus"],
-        title: "Turing and von Neumann's Brains and their Computers",
-        year: 2012,
-        journal: "International Conference on Membrane Computing",
-        pdf: "/papers/Turing and von Neumann's Brains and their Computers.pdf",
-        tags: [],
-    },
-    {
-        authors: ["Leon N. Cooper", "Sorin Istrail"],
-        title: "Mental Experience and the Turing Test: This Double Face is the Face of Mathematics",
-        year: 2012,
-        journal: "Proceedings of the Turing Centenary Conference",
-        pdf: "/papers/Mental Experience and the Turing Test.pdf",
-        tags: [],
-    },
-    {
-        authors: ["Sorin Istrail"],
-        title: "Ode to Computational Biology: A letter in support of awarding the National Medal of Science to Professor Michael Waterman",
-        year: 2012,
-        pdf: "/papers/Ode to Computational Biology.pdf",
-        tags: [],
-    },
-    {
-        authors: ["Sorin Istrail"],
-        title: "Professor Solomon Marcus' Axioms",
-        year: 2011,
-        journal:
-            "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
-        pdf: "/papers/MarcusAxioms.pdf",
-        tags: [],
-    },
+  {
+    authors: [],
+    title: "Brown University: 250th Anniversary Symposium: The Next 250 Years",
+    year: 2015,
+    pdf: "/papers/250th Anniversary Symposium.pdf",
+    tags: [],
+  },
+  {
+    authors: ["Sorin Istrail", "Solomon Marcus"],
+    title: "Turing and von Neumann's Brains and their Computers",
+    year: 2012,
+    journal: "International Conference on Membrane Computing",
+    pdf: "/papers/Turing and von Neumann's Brains and their Computers.pdf",
+    tags: [],
+  },
+  {
+    authors: ["Leon N. Cooper", "Sorin Istrail"],
+    title:
+      "Mental Experience and the Turing Test: This Double Face is the Face of Mathematics",
+    year: 2012,
+    journal: "Proceedings of the Turing Centenary Conference",
+    pdf: "/papers/Mental Experience and the Turing Test.pdf",
+    tags: [],
+  },
+  {
+    authors: ["Sorin Istrail"],
+    title:
+      "Ode to Computational Biology: A letter in support of awarding the National Medal of Science to Professor Michael Waterman",
+    year: 2012,
+    pdf: "/papers/Ode to Computational Biology.pdf",
+    tags: [],
+  },
+  {
+    authors: ["Sorin Istrail"],
+    title: "Professor Solomon Marcus' Axioms",
+    year: 2011,
+    journal:
+      "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
+    pdf: "/papers/MarcusAxioms.pdf",
+    tags: [],
+  },
 
-    {
-        authors: [
-            "Sorin Istrail",
-            "Pavel Pevzner",
-            "Ron Shamir",
-            "Fengzhu Sun",
-        ],
-        title: "Tribute to Michael Waterman on his 67th Birthday",
-        journal: "Communications in Information and Systems",
-        publisher: "International Press",
-        year: 2009,
-        pdf: "/papers/TributeBirthdayWaterman67.pdf",
-        tags: [],
-    },
-    {
-        authors: ["Sorin Istrail"],
-        title: 'Review of Eric Davidson\'s book "The Regulatory Genome: Gene Regulatory Networks in Development and Regulation"',
-        publisher: "Academic Press",
-        year: 2006,
-        pdf: "/papers/Review of Davidson book.pdf",
-        tags: [],
-    },
-    {
-        authors: ["Sorin Istrail"],
-        title: "On the scientific activity of Laurent Chottin (1947 - 1979)",
-        year: 1984,
-        journal:
-            "Bulletin of the European Association for Theoretical Computer Science",
-        tags: [],
-    },
-    {
-        title: "Dijkstra's Letter to Istrail",
-        authors: ["Edsgar W. Dijkstra"],
-        year: 1983,
-        pdf: "/papers/DijkstraLetter.pdf",
-        tags: [],
-    },
-    {
-        title: "Istrail's Letter to Dijkstra",
-        authors: ["Sorin Istrail"],
-        year: 1983,
-        pdf: "/papers/SorinLetter.pdf",
-        tags: [],
-    },
-    {
-        authors: ["Sorin Istrail"],
-        title: 'Review of Edsger W. Dijkstra\'s book "Selected Writings on Computing: A Personal Persepective"',
-        publisher: "Springer-Verlag",
-        year: 1982,
-        pdf: "/papers/Review of Dijkstra Book.pdf",
-        tags: [],
-    },
+  {
+    authors: ["Sorin Istrail", "Pavel Pevzner", "Ron Shamir", "Fengzhu Sun"],
+    title: "Tribute to Michael Waterman on his 67th Birthday",
+    journal: "Communications in Information and Systems",
+    publisher: "International Press",
+    year: 2009,
+    pdf: "/papers/TributeBirthdayWaterman67.pdf",
+    tags: [],
+  },
+  {
+    authors: ["Sorin Istrail"],
+    title:
+      'Review of Eric Davidson\'s book "The Regulatory Genome: Gene Regulatory Networks in Development and Regulation"',
+    publisher: "Academic Press",
+    year: 2006,
+    pdf: "/papers/Review of Davidson book.pdf",
+    tags: [],
+  },
+  {
+    authors: ["Sorin Istrail"],
+    title: "On the scientific activity of Laurent Chottin (1947 - 1979)",
+    year: 1984,
+    journal:
+      "Bulletin of the European Association for Theoretical Computer Science",
+    tags: [],
+  },
+  {
+    title: "Dijkstra's Letter to Istrail",
+    authors: ["Edsgar W. Dijkstra"],
+    year: 1983,
+    pdf: "/papers/DijkstraLetter.pdf",
+    tags: [],
+  },
+  {
+    title: "Istrail's Letter to Dijkstra",
+    authors: ["Sorin Istrail"],
+    year: 1983,
+    pdf: "/papers/SorinLetter.pdf",
+    tags: [],
+  },
+  {
+    authors: ["Sorin Istrail"],
+    title:
+      'Review of Edsger W. Dijkstra\'s book "Selected Writings on Computing: A Personal Persepective"',
+    publisher: "Springer-Verlag",
+    year: 1982,
+    pdf: "/papers/Review of Dijkstra Book.pdf",
+    tags: [],
+  },
 ];
 ---
 
 <Layout title="Istrail Lab | Essays">
-    <h2 class="flex-1 text-3xl font-bold pt-8">Essays: Axiom Series</h2>
-    <div class="grid gap-6 py-4">
-        <div>
-            <h3 class="flex-1 text-2xl font-bold">John von Neumann's Axioms</h3>
-            <div class="py-4">
-                <EssayCard
-                    publication={{
-                        authors: ["Sorin Istrail", "Tracie Sweeney"],
-                        title: "Randomness is Beautiful: in Search of von Neumann",
-                        journal: "Conduit",
-                        volume: "9",
-                        year: 2006,
-                        pdf: "/papers/Randomness is Beautiful: in Search of von Neumann.pdf",
-                        tags: [],
-                    }}
-                />
-            </div>
-        </div>
-
-        <div>
-            <h3 class="flex-1 text-2xl font-bold">Eric Davidson's Axioms</h3>
-            <div class="py-4">
-                <EssayCard
-                    publication={{
-                        authors: ["Sorin Istrail"],
-                        title: "Eric Davidson - Master of the Universe",
-                        journal: "Developmental Biology",
-                        volume: "412",
-                        year: 2016,
-                        pdf: "/papers/EricDavidson-MasterOfTheUniverse-DevBiol2016 2.pdf",
-                        tags: [],
-                    }}
-                />
-            </div>
-        </div>
-
-        <div>
-            <h3 class="flex-1 text-2xl font-bold">Michael Waterman's Axioms</h3>
-            <div class="py-4">
-                <EssayCard
-                    publication={{
-                        authors: ["Sorin Istrail"],
-                        title: "Mike Waterman is a National Treasure",
-                        journal:
-                            '"Michael Waterman\'s Contributions to Computational Biology and Bioinformatics" Journal of Computational Biology',
-                        volume: "29",
-                        number: "7",
-                        year: 2022,
-                        pdf: "/papers/Sorin_Waterman_contribution_JCB2022.pdf",
-                        tags: [],
-                    }}
-                />
-            </div>
-        </div>
-
-        <div>
-            <h3 class="flex-1 text-2xl font-bold">
-                Edsger W. Dijkstra's Axioms
-            </h3>
-            <div class="grid gap-4 py-4">
-                <EssayCard
-                    publication={{
-                        authors: ["Sorin Istrail"],
-                        title: "Storytelling about Lighthouses: Criticizing Professor Dijkstra Considered Harmless",
-                        journal: "Conduit",
-                        volume: "17.2",
-                        year: 2008,
-                        pdf: "/papers/Criticizing Professor Dijkstra Considered Harmless.pdf",
-                        tags: [],
-                    }}
-                />
-                <EssayCard
-                    publication={{
-                        authors: ["Sorin Istrail"],
-                        title: "Storytelling about Lighthouses: When Professor Dijkstra Slapped Me in the Quest for Beautiful Code",
-                        journal: "Conduit",
-                        volume: "19.1",
-                        year: 2010,
-                        pdf: "/papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
-                        tags: [],
-                    }}
-                />
-            </div>
-        </div>
-
-        <div>
-            <h3 class="flex-1 text-2xl font-bold">Solomon Marcus's Axioms</h3>
-            <div class="py-4">
-                <EssayCard
-                    publication={{
-                        authors: ["Sorin Istrail"],
-                        title: "Professor Solomon Marcus' Axioms",
-                        year: 2011,
-                        journal:
-                            "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
-                        pdf: "/papers/MarcusAxioms.pdf",
-                        tags: [],
-                    }}
-                />
-            </div>
-        </div>
-
-        <div>
-            <h3 class="flex-1 text-2xl font-bold">
-                Alberto Apostolico's Axioms
-            </h3>
-            <div class="py-4">
-                <EssayCard
-                    publication={{
-                        authors: ["Sorin Istrail"],
-                        title: "Trascina faccende, Alberto!",
-                        year: 2015,
-                        pages: "66-68",
-                        journal: "The Apoostolic Tales",
-                        pdf: "https://cpm.cs.helsinki.fi/Apostolic-Tales.pdf",
-                        tags: [],
-                    }}
-                />
-            </div>
-        </div>
-
-        <div>
-            <h3 class="flex-1 text-2xl font-bold">Albert Meyer's Axioms</h3>
-            <div class="py-4">
-                <p>In Progress</p>
-            </div>
-        </div>
-
-        <h2 class="flex-1 text-3xl font-bold pt-8">Essays</h2>
-        <div class="grid gap-4 py-4">
-            {essays.map((essay) => <EssayCard publication={essay} />)}
-        </div>
+  <h2 class="flex-1 text-3xl font-bold pt-8">Essays: Axiom Series</h2>
+  <div class="grid gap-6 py-4">
+    <div>
+      <h3 class="flex-1 text-2xl font-bold">John von Neumann's Axioms</h3>
+      <div class="py-4">
+        <EssayCard
+          publication={{
+            authors: ["Sorin Istrail", "Tracie Sweeney"],
+            title: "Randomness is Beautiful: In search of von Neumann",
+            journal: "Conduit",
+            volume: "9",
+            year: 2006,
+            pdf: "/papers/randomness_vonneumann.pdf",
+            tags: [],
+          }}
+        />
+      </div>
     </div>
+
+    <div>
+      <h3 class="flex-1 text-2xl font-bold">Eric Davidson's Axioms</h3>
+      <div class="py-4">
+        <EssayCard
+          publication={{
+            authors: ["Sorin Istrail"],
+            title: "Eric Davidson - Master of the Universe",
+            journal: "Developmental Biology",
+            volume: "412",
+            year: 2016,
+            pdf: "/papers/EricDavidson-MasterOfTheUniverse-DevBiol2016 2.pdf",
+            tags: [],
+          }}
+        />
+      </div>
+    </div>
+
+    <div>
+      <h3 class="flex-1 text-2xl font-bold">Michael Waterman's Axioms</h3>
+      <div class="py-4">
+        <EssayCard
+          publication={{
+            authors: ["Sorin Istrail"],
+            title: "Mike Waterman is a National Treasure",
+            journal:
+              '"Michael Waterman\'s Contributions to Computational Biology and Bioinformatics" Journal of Computational Biology',
+            volume: "29",
+            number: "7",
+            year: 2022,
+            pdf: "/papers/Sorin_Waterman_contribution_JCB2022.pdf",
+            tags: [],
+          }}
+        />
+      </div>
+    </div>
+
+    <div>
+      <h3 class="flex-1 text-2xl font-bold">Edsger W. Dijkstra's Axioms</h3>
+      <div class="grid gap-4 py-4">
+        <EssayCard
+          publication={{
+            authors: ["Sorin Istrail"],
+            title:
+              "Storytelling about Lighthouses: Criticizing Professor Dijkstra Considered Harmless",
+            journal: "Conduit",
+            volume: "17.2",
+            year: 2008,
+            pdf: "/papers/Criticizing Professor Dijkstra Considered Harmless.pdf",
+            tags: [],
+          }}
+        />
+        <EssayCard
+          publication={{
+            authors: ["Sorin Istrail"],
+            title:
+              "Storytelling about Lighthouses: When Professor Dijkstra Slapped Me in the Quest for Beautiful Code",
+            journal: "Conduit",
+            volume: "19.1",
+            year: 2010,
+            pdf: "/papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
+            tags: [],
+          }}
+        />
+      </div>
+    </div>
+
+    <div>
+      <h3 class="flex-1 text-2xl font-bold">Solomon Marcus's Axioms</h3>
+      <div class="py-4">
+        <EssayCard
+          publication={{
+            authors: ["Sorin Istrail"],
+            title: "Professor Solomon Marcus' Axioms",
+            year: 2011,
+            journal:
+              "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
+            pdf: "/papers/MarcusAxioms.pdf",
+            tags: [],
+          }}
+        />
+      </div>
+    </div>
+
+    <div>
+      <h3 class="flex-1 text-2xl font-bold">Alberto Apostolico's Axioms</h3>
+      <div class="py-4">
+        <EssayCard
+          publication={{
+            authors: ["Sorin Istrail"],
+            title: "Trascina faccende, Alberto!",
+            year: 2015,
+            pages: "66-68",
+            journal: "The Apoostolic Tales",
+            pdf: "https://cpm.cs.helsinki.fi/Apostolic-Tales.pdf",
+            tags: [],
+          }}
+        />
+      </div>
+    </div>
+
+    <div>
+      <h3 class="flex-1 text-2xl font-bold">Albert Meyer's Axioms</h3>
+      <div class="py-4">
+        <p>In Progress</p>
+      </div>
+    </div>
+
+    <h2 class="flex-1 text-3xl font-bold pt-8">Essays</h2>
+    <div class="grid gap-4 py-4">
+      {essays.map((essay) => <EssayCard publication={essay} />)}
+    </div>
+  </div>
 </Layout>
