--- a/src/pages/media-coverage.astro
+++ b/src/pages/media-coverage.astro
@@ -3,262 +3,259 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="Istrail Lab | Media Coverage">
-    <h2 class="text-3xl font-bold py-4">Lab Media Coverage</h2>
-    <div class="flex gap-10">
-        <ul class="basis-1/2 list-disc grid gap-4">
-            <li>
-                <a
-                    class="underline text-blue-400"
-                    href="http://www.browndailyherald.com/2011/09/21/bio-center-to-focus-on-collaboration/"
-                    target="_blank">"Bio center to focus on collaboration"</a
-                >
-                <br />
-                Brown Daily Herald, September 11, 2011
-            </li>
+  <h2 class="text-3xl font-bold py-4">Lab Media Coverage</h2>
+  <div class="flex gap-10">
+    <ul class="basis-1/2 list-disc grid gap-4">
+      <li>
+        <a
+          class="underline text-blue-400"
+          href="http://www.browndailyherald.com/2011/09/21/bio-center-to-focus-on-collaboration/"
+          target="_blank">"Bio center to focus on collaboration"</a
+        >
+        <br />
+        Brown Daily Herald, September 11, 2011
+      </li>
 
-            <li>
-                <a
-                    class="underline text-blue-400"
-                    href="http://www.brown.edu/web/documents/0910-annualreport.pdf"
-                    target="_blank">"Capturing the Essence of Life"</a
-                >
-                <br />
-                Brown Annual Report 2009-2010
-            </li>
-            <li>
-                November 20, 2006<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/06-055.html"
-                    target="_blank"
-                >
-                    "Brown Symposium Highlights Next Wave in Biology and
-                    Business"</a
-                ><br />
-                Brown Media Relations, Center for Computational Molecular Biology
-            </li>
+      <li>
+        <a
+          class="underline text-blue-400"
+          href="http://www.brown.edu/web/documents/0910-annualreport.pdf"
+          target="_blank">"Capturing the Essence of Life"</a
+        >
+        <br />
+        Brown Annual Report 2009-2010
+      </li>
+      <li>
+        November 20, 2006<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/06-055.html"
+          target="_blank"
+        >
+          "Brown Symposium Highlights Next Wave in Biology and Business"</a
+        ><br />
+        Brown Media Relations, Center for Computational Molecular Biology
+      </li>
 
-            <li>
-                August 1, 2007<br />
-                <a
-                    class="underline text-blue-400"
-                    href="http://en.wikipedia.org/wiki/Ising_model"
-                    target="_blank"
-                >
-                    "The Ising Model (Wikipedia)"</a
-                ><br />
-                Wikipedia, The Free Encyclopedia
-            </li>
+      <li>
+        August 1, 2007<br />
+        <a
+          class="underline text-blue-400"
+          href="http://en.wikipedia.org/wiki/Ising_model"
+          target="_blank"
+        >
+          "The Ising Model (Wikipedia)"</a
+        ><br />
+        Wikipedia, The Free Encyclopedia
+      </li>
 
-            <li>
-                November 20, 2006<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/06-055.html"
-                    target="_blank"
-                >
-                    "Brown Symposium Highlights Next Wave in Biology and
-                    Business"</a
-                ><br />
-                Brown Media Relations, Center for Computational Molecular Biology
-            </li>
+      <li>
+        November 20, 2006<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/06-055.html"
+          target="_blank"
+        >
+          "Brown Symposium Highlights Next Wave in Biology and Business"</a
+        ><br />
+        Brown Media Relations, Center for Computational Molecular Biology
+      </li>
 
-            <li>
-                November 10, 2006<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/11-10-06Brown_urchin.html"
-                    target="_blank"
-                >
-                    "Surprise! Your cousin's a sea urchin"</a
-                ><br />
-                Media coverage of Brown University and issues in higher education
-            </li>
+      <li>
+        November 10, 2006<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/11-10-06Brown_urchin.html"
+          target="_blank"
+        >
+          "Surprise! Your cousin's a sea urchin"</a
+        ><br />
+        Media coverage of Brown University and issues in higher education
+      </li>
 
-            <li>
-                November 9, 2006<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/06-052.html"
-                    target="_blank"
-                >
-                    "Sea Urchin Genome Is a Biology Boon and a Computational
-                    Feat"</a
-                ><br />
-                Brown Media Relations, Center for Computational Molecular Biology
-            </li>
+      <li>
+        November 9, 2006<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/06-052.html"
+          target="_blank"
+        >
+          "Sea Urchin Genome Is a Biology Boon and a Computational Feat"</a
+        ><br />
+        Brown Media Relations, Center for Computational Molecular Biology
+      </li>
 
-            <li>
-                Spring 2006<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/Conduitv910-15.pdf"
-                    target="_blank"
-                >
-                    "Randomness is Beautiful: In Search of von Neumann"</a
-                ><br />
-                Conduit Magazine vol. 9
-            </li>
+      <li>
+        Spring 2006<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/Conduitv910-15.pdf"
+          target="_blank"
+        >
+          "Randomness is Beautiful: In search of von Neumann"</a
+        ><br />
+        Conduit Magazine vol. 9
+      </li>
 
-            <li>
-                February 19, 2004<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/TheScientistCeleradefendshumansequence.htm"
-                    target="_blank"
-                >
-                    "Celera defends human sequence"</a
-                ><br />
-                Cathy Holding, The Scientist
-            </li>
-            <li>
-                March 2001<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/Identifying_an_Intractable_Scientific_Problem.pdf"
-                    target="_blank"
-                >
-                    Identifying an Intractable Scientific Problem</a
-                ><br />
-                U.S. Department of Energy, Office of Science News Release
-            </li>
+      <li>
+        February 19, 2004<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/TheScientistCeleradefendshumansequence.htm"
+          target="_blank"
+        >
+          "Celera defends human sequence"</a
+        ><br />
+        Cathy Holding, The Scientist
+      </li>
+      <li>
+        March 2001<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/Identifying_an_Intractable_Scientific_Problem.pdf"
+          target="_blank"
+        >
+          Identifying an Intractable Scientific Problem</a
+        ><br />
+        U.S. Department of Energy, Office of Science News Release
+      </li>
 
-            <li>
-                2000<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/ising_model_np_complete.pdf"
-                    target="_blank"
-                >
-                    The Ising Model is NP-complete</a
-                >
-                <br /> Barry Cipra, SIAM News, vol. 33, No. 6
-            </li>
-        </ul>
-        <ul class="basis-1/2 list-disc grid gap-4">
-            <li>
-                June 2, 2000<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/Science_2_June_2000.pdf"
-                    target="_blank"
-                >
-                    MATHEMATICS: Statistical Physicists Phase Out a Dream</a
-                >
-                <br />
-                Barry Cipra, Science, vol. 288, pp. 5471
-            </li>
-            <li>
-                April 26, 2000<br />
-                <a
-                    class="underline text-blue-400"
-                    href="http://www.brown.edu/Research/Ishttps://www.brown.edu/Research/Istrail_Lab/trail_Lab/media/Ising-Istrail-media%20coverage/The%20Ising%20on%20the%20cake.htm"
-                    target="_blank"
-                >
-                    PHYSICS: The Ising on the Cake</a
-                ><br />
-                Philip Ball Nature
-            </li>
+      <li>
+        2000<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/ising_model_np_complete.pdf"
+          target="_blank"
+        >
+          The Ising Model is NP-complete</a
+        >
+        <br /> Barry Cipra, SIAM News, vol. 33, No. 6
+      </li>
+    </ul>
+    <ul class="basis-1/2 list-disc grid gap-4">
+      <li>
+        June 2, 2000<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/Science_2_June_2000.pdf"
+          target="_blank"
+        >
+          MATHEMATICS: Statistical Physicists Phase Out a Dream</a
+        >
+        <br />
+        Barry Cipra, Science, vol. 288, pp. 5471
+      </li>
+      <li>
+        April 26, 2000<br />
+        <a
+          class="underline text-blue-400"
+          href="http://www.brown.edu/Research/Ishttps://www.brown.edu/Research/Istrail_Lab/trail_Lab/media/Ising-Istrail-media%20coverage/The%20Ising%20on%20the%20cake.htm"
+          target="_blank"
+        >
+          PHYSICS: The Ising on the Cake</a
+        ><br />
+        Philip Ball Nature
+      </li>
 
-            <li>
-                April 24, 2000<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/Sandia press release ising.htm"
-                    target="_blank"
-                >
-                    "Why, in Superbowl of statistical mechanics, famous players
-                    could never cross goal line
-                    <br />--- Three-dimensional proof for Ising Model
-                    impossible, Sandia researcher claims"
-                </a><br />
-                Sandia National Labs Press Release, Ising
-            </li>
+      <li>
+        April 24, 2000<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/Sandia press release ising.htm"
+          target="_blank"
+        >
+          "Why, in Superbowl of statistical mechanics, famous players could
+          never cross goal line
+          <br />--- Three-dimensional proof for Ising Model impossible, Sandia
+          researcher claims"
+        </a><br />
+        Sandia National Labs Press Release, Ising
+      </li>
 
-            <li>
-                March 6, 1999<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/ScienceNews protein folding mistakes fob6.htm"
-                    target="_blank"
-                >
-                    "Simulations nab protein-folding mistakes"</a
-                ><br />
-                I. Peterson, ScienceNews, Vol. 155, No 10
-            </li>
+      <li>
+        March 6, 1999<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/ScienceNews protein folding mistakes fob6.htm"
+          target="_blank"
+        >
+          "Simulations nab protein-folding mistakes"</a
+        ><br />
+        I. Peterson, ScienceNews, Vol. 155, No 10
+      </li>
 
-            <li>
-                March 1, 1999<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/Scientific American To fold or not to fold.cfm.htm"
-                    target="_blank"
-                >
-                    "To fold or not to fold"</a
-                ><br />
-                Scientific American, In Focus
-            </li>
+      <li>
+        March 1, 1999<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/Scientific American To fold or not to fold.cfm.htm"
+          target="_blank"
+        >
+          "To fold or not to fold"</a
+        ><br />
+        Scientific American, In Focus
+      </li>
 
-            <li>
-                Feb. 25, 1999<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/990225072549.htm"
-                    target="_blank"
-                >
-                    "Protein Adulstery Revealed ? Mechanism of protein folding
-                    captured in protein simulation"</a
-                ><br />
-                ScienceDaily
-            </li>
+      <li>
+        Feb. 25, 1999<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/990225072549.htm"
+          target="_blank"
+        >
+          "Protein Adulstery Revealed ? Mechanism of protein folding captured in
+          protein simulation"</a
+        ><br />
+        ScienceDaily
+      </li>
 
-            <li>
-                May — June 1998<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/15717.htm"
-                    target="_blank"
-                >
-                    American Scientist</a
-                ><br />
-                Brian Hayes, "Prototeins"
-            </li>
+      <li>
+        May — June 1998<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/15717.htm"
+          target="_blank"
+        >
+          American Scientist</a
+        ><br />
+        Brian Hayes, "Prototeins"
+      </li>
 
-            <li>
-                March 25, 1997<br />
-                <a
-                    class="underline text-blue-400"
-                    href="http://query.nytimes.com/gst/fullpage.html?sec=technology&res=9407E6DA103BF936A15750C0A961958260"
-                    target="_blank"
-                >
-                    "Designing Life: Proteins 1, Computer 0"</a
-                ><br />
-                George Johnson, The New York Times
-            </li>
+      <li>
+        March 25, 1997<br />
+        <a
+          class="underline text-blue-400"
+          href="http://query.nytimes.com/gst/fullpage.html?sec=technology&res=9407E6DA103BF936A15750C0A961958260"
+          target="_blank"
+        >
+          "Designing Life: Proteins 1, Computer 0"</a
+        ><br />
+        George Johnson, The New York Times
+      </li>
 
-            <li>
-                Januray 13, 1996<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/Sandia Labs reslease re RECOMB 97.htm"
-                    target="_blank"
-                >
-                    "Computational Molecular Biology Conference Attracts O.J.
-                    Simpson Luminaries"</a
-                ><br />
-                Sandia Labs Release, RECOMB '97
-            </li>
-            <li>
-                September 1995<br />
-                <a
-                    class="underline text-blue-400"
-                    href="https://www.brown.edu/Research/Istrail_Lab/media/folding_proteins_fast.pdf"
-                    target="_blank"
-                >
-                    "Folding Proteins Fast"</a
-                ><br />
-                Science, vol. 269, pp. 1821
-            </li>
-        </ul>
-    </div>
+      <li>
+        Januray 13, 1996<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/Sandia Labs reslease re RECOMB 97.htm"
+          target="_blank"
+        >
+          "Computational Molecular Biology Conference Attracts O.J. Simpson
+          Luminaries"</a
+        ><br />
+        Sandia Labs Release, RECOMB '97
+      </li>
+      <li>
+        September 1995<br />
+        <a
+          class="underline text-blue-400"
+          href="https://www.brown.edu/Research/Istrail_Lab/media/folding_proteins_fast.pdf"
+          target="_blank"
+        >
+          "Folding Proteins Fast"</a
+        ><br />
+        Science, vol. 269, pp. 1821
+      </li>
+    </ul>
+  </div>
 </Layout>
